@@ -73,7 +73,7 @@ class TestCommit(ExternalBase):
         wt.rename_one('hello.txt', 'gutentag.txt')
         out, err = self.run_bzr("commit", "-m", "renamed")
         self.assertEqual('', out)
-        self.assertEqual('renamed gutentag.txt\n'
+        self.assertEqual('renamed hello.txt => gutentag.txt\n'
                          'Committed revision 2.\n',
                          err)
 
@@ -86,7 +86,7 @@ class TestCommit(ExternalBase):
         out, err = self.run_bzr("commit", "-m", "renamed")
         self.assertEqual('', out)
         self.assertEqualDiff('added subdir\n'
-                             'renamed subdir/hello.txt\n'
+                             'renamed hello.txt => subdir/hello.txt\n'
                              'Committed revision 2.\n',
                              err)
 
@@ -102,7 +102,7 @@ class TestCommit(ExternalBase):
                          'Committed revision 1.\n',
                          err)
 
-    def test_16_verbose_commit_with_unchanged(self):
+    def test_verbose_commit_with_unchanged(self):
         """Unchanged files should not be listed by default in verbose output"""
         self.runbzr("init")
         self.build_tree(['hello.txt', 'unchanged.txt'])
@@ -114,6 +114,72 @@ class TestCommit(ExternalBase):
         self.assertEqual('added hello.txt\n'
                          'Committed revision 2.\n',
                          err)
+
+    def test_commit_merge_reports_all_modified_files(self):
+        # the commit command should show all the files that are shown by
+        # bzr diff or bzr status when committing, even when they were not
+        # changed by the user but rather through doing a merge.
+        this_tree = self.make_branch_and_tree('this')
+        # we need a bunch of files and dirs, to perform one action on each.
+        self.build_tree([
+            'this/dirtorename/',
+            'this/dirtoreparent/',
+            'this/dirtoleave/',
+            'this/dirtoremove/',
+            'this/filetoreparent',
+            'this/filetorename',
+            'this/filetomodify',
+            'this/filetoremove',
+            'this/filetoleave']
+            )
+        this_tree.add([
+            'dirtorename',
+            'dirtoreparent',
+            'dirtoleave',
+            'dirtoremove',
+            'filetoreparent',
+            'filetorename',
+            'filetomodify',
+            'filetoremove',
+            'filetoleave']
+            )
+        this_tree.commit('create_files')
+        other_dir = this_tree.bzrdir.sprout('other')
+        other_tree = other_dir.open_workingtree()
+        other_tree.lock_write()
+        # perform the needed actions on the files and dirs.
+        try:
+            other_tree.rename_one('dirtorename', 'renameddir')
+            other_tree.rename_one('dirtoreparent', 'renameddir/reparenteddir')
+            other_tree.rename_one('filetorename', 'renamedfile')
+            other_tree.rename_one('filetoreparent', 'renameddir/reparentedfile')
+            other_tree.remove(['dirtoremove', 'filetoremove'])
+            self.build_tree_contents([
+                ('other/newdir/', ),
+                ('other/filetomodify', 'new content'),
+                ('other/newfile', 'new file content')])
+            other_tree.add('newfile')
+            other_tree.add('newdir/')
+            other_tree.commit('modify all sample files and dirs.')
+        finally:
+            other_tree.unlock()
+        self.merge(other_tree.branch, this_tree)
+        os.chdir('this')
+        out,err = self.run_bzr("commit", "-m", "added")
+        os.chdir('..')
+        self.assertEqual('', out)
+        self.assertEqualDiff(
+            'modified filetomodify\n'
+            'added newdir\n'
+            'added newfile\n'
+            'renamed dirtorename => renameddir\n'
+            'renamed dirtoreparent => renameddir/reparenteddir\n'
+            'renamed filetoreparent => renameddir/reparentedfile\n'
+            'renamed filetorename => renamedfile\n'
+            'deleted dirtoremove\n'
+            'deleted filetoremove\n'
+            'Committed revision 2.\n',
+            err)
 
     def test_empty_commit_message(self):
         self.runbzr("init")
